<resources>
    <!--TODO: Tên App-->
    <string name="app_name">HTC Portal</string>

    <!--TODO: Tiêu đề LoginActivity-->
    <string name="title_login">ĐĂNG NHẬP</string>
    <string name="title_forget_password"><u>Quên mật khẩu</u></string>
    <string name="title_password">MẬT KHẨU</string>
    <string name="title_account">TÀI KHOẢN</string>

    <!--TODO: Tiêu đề ForgetPasswordActivity-->
    <string name="message_forgot_password">Vui lòng nhập địa chỉ email để nhận mã xác nhận</string>
    <string name="title_input_email_address">Nhập địa chỉ email</string>
    <string name="title_send_code">GỬI MÃ XÁC NHẬN</string>

    <!--TODO: Dialog ForgetPasswordActivity-->
    <string name="dialog_send_code">Mã xác nhận đã được gửi tới địa chỉ email</string>

    <!--TODO: Tiêu đề ResetPasswordActivity-->
    <string name="title_new_password">Mật khẩu mới</string>
    <string name="title_new_repassword">Xác nhận mật khẩu mới</string>
    <string name="title_code">Mã xác nhận</string>
    <string name="title_change_password">XÁC NHẬN THAY ĐỔI MẬT KHẨU</string>

    <!--TODO: Tiêu đề Header Drawer Nav-->
    <string name="title_default_job">Nhân viên kinh doanh</string>
    <string name="title_default_name">Nguyễn Văn A</string>
    <string name="title_logout">ĐĂNG XUẤT</string>

    <!--TODO: Tiêu đề Drawer Nav-->
    <string name="drawer_user_info">Thông tin cá nhân</string>
    <string name="drawer_my_work">Công việc của tôi</string>
    <string name="drawer_favorite">Yêu thích</string>
    <string name="drawer_settings">Thiết lập</string>

    <!--TODO: Tiêu đề Bottom Nav-->
    <string name="bottom_home">Trang chủ</string>
    <string name="bottom_info">Thông tin</string>
    <string name="bottom_market">Thị trường</string>
    <string name="bottom_regulations">Quy định</string>
    <string name="bottom_bottom_job">Công việc</string>

    <!--TODO: Tiêu đề MainActivity-->
    <string name="main_default_title">HUYNDAI THÀNH CÔNG</string>
    <string name="main_home_title">HUYNDAI THÀNH CÔNG</string>
    <string name="main_info_title">THÔNG TIN HTC</string>
    <string name="main_market_title">THỊ TRƯỜNG Ô TÔ</string>
    <string name="title_search">Tìm kiếm…</string>

    <!--TODO: Default Item InfoFragment-->
    <string name="info_default">Giới thiệu chung về HTC</string>

    <!--TODO: Tiêu đề UserInfoActivity-->
    <string name="user_info_title_name">Họ và tên</string>
    <string name="user_info_default_name">Nguyễn Văn A</string>
    <string name="user_info_title_part">Bộ phận</string>
    <string name="user_info_default_part">BP. Marketing</string>
    <string name="user_info_title_department">Phòng ban</string>
    <string name="user_info_default_department">P. Kinh Doanh</string>
    <string name="user_info_title_email">Email</string>
    <string name="user_info_default_email">abc1@hyundai-thanhcong.vn</string>
    <string name="user_info_title_phone">Điện thoại liên hệ</string>
    <string name="user_info_default_phone">0912345678</string>

    <string name="my_work_default_title">LỊCH HỌP</string>
    <string name="my_work_default_from"><b>Đề xuất bởi:</b> sanghv@htc.com</string>
    <string name="my_work_default_local">Địa điểm: Phòng họp số 206</string>
    <string name="my_work_default_time">Thời gian: 17:00 27–7–2018</string>
    <string name="my_work_default_desc">Miêu tả: Họp triển khai kinh doanh</string>
    <string name="my_work_default_status">Chưa diễn ra</string>

</resources>
