<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@color/colorPrimary"
                    tools:ignore="ContentDescription" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cardView"
                android:text="@string/my_work_default_title"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle"
                android:layout_alignStart="@id/tvTitle"
                android:text="@string/my_work_default_from"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFrom"
                android:layout_alignStart="@id/tvTitle"
                android:text="@string/my_work_default_local"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLocal"
                android:layout_alignStart="@id/tvTitle"
                android:text="@string/my_work_default_time"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTime"
                android:layout_alignStart="@id/tvTitle"
                android:text="@string/my_work_default_desc"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:background="@drawable/layout_status"
                android:text="@string/my_work_default_status"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>