<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/ivTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/background"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivMid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivTop"
        android:layout_marginTop="-37dp"
        android:adjustViewBounds="true"
        android:src="@drawable/background_elip"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ivMid"
        android:layout_marginTop="-37dp"
        android:adjustViewBounds="true"
        android:background="@drawable/background_gray"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="ContentDescription">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-20dp"
            android:text="@string/message_forgot_password"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/tvMessage"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/layout_edit_text"
            android:cursorVisible="false"
            android:hint="@string/title_input_email_address"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btSend"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/etEmail"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/layout_button"
            android:text="@string/title_send_code"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


    </RelativeLayout>

</RelativeLayout>